# python-tree-sitter-builder

./: README.md  pyproject.toml
src/tree_sitter_builder/: __main__.py
src/tree_sitter_builder/subr/: __init__.py  git.py
